# tgbot

./: .gitignore  CMakeLists.txt  README.md  old_main.cc
include/: BotConfig.hpp  HttpClient.hpp  TelegramBot.hpp
src/: HttpClient.cpp  TelegramBot.cpp  main.cpp
